--- a/package.json
+++ b/package.json
@@ -46,19 +46,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.4",
-    "@angular/cdk": "~8.1.4",
-    "@angular/common": "~8.2.4",
-    "@angular/compiler": "~8.2.4",
-    "@angular/core": "~8.2.4",
+    "@angular/animations": "~8.2.5",
+    "@angular/cdk": "~8.2.0",
+    "@angular/common": "~8.2.5",
+    "@angular/compiler": "~8.2.5",
+    "@angular/core": "~8.2.5",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "~8.2.4",
-    "@angular/material": "~8.1.4",
-    "@angular/platform-browser": "~8.2.4",
-    "@angular/platform-browser-dynamic": "~8.2.4",
-    "@angular/pwa": "^0.803.2",
-    "@angular/router": "~8.2.4",
-    "@angular/service-worker": "~8.2.4",
+    "@angular/forms": "~8.2.5",
+    "@angular/material": "^8.2.0",
+    "@angular/platform-browser": "~8.2.5",
+    "@angular/platform-browser-dynamic": "~8.2.5",
+    "@angular/pwa": "^0.803.4",
+    "@angular/router": "~8.2.5",
+    "@angular/service-worker": "~8.2.5",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
     "material-icon-font": "^3.0.1",
@@ -69,11 +69,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.2",
-    "@angular-devkit/build-ng-packagr": "~0.803.2",
-    "@angular/cli": "~8.3.2",
-    "@angular/compiler-cli": "~8.2.4",
-    "@angular/language-service": "~8.2.4",
+    "@angular-devkit/build-angular": "~0.803.4",
+    "@angular-devkit/build-ng-packagr": "~0.803.4",
+    "@angular/cli": "~8.3.4",
+    "@angular/compiler-cli": "~8.2.5",
+    "@angular/language-service": "~8.2.5",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "ng-packagr": "^5.4.0",
