--- a/projects/VinesToWinesDM/tsconfig.json
+++ b/projects/VinesToWinesDM/tsconfig.json
@@ -120,6 +120,10 @@
     "outDir": "../../out-tsc/app",
     "types": []
   },
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
   "include": [
     "src/**/*.ts"
   ],
