--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "ngc-cms-a": "ng g component --project=material-cms-admin --",
     "ngc-cms-v": "ng g component --project=material-cms-view --",
     "ngc-dsl": "ng g component --project=DailySpendLimit --",
+    "ngc-rr": "ng g component --project=RedditReader --",
     "ngc-vtw": "ng g component --project=VinesToWinesDM --",
     "ngm-dsl": "ng g module --project=DailySpendLimit --",
+    "ngm-rr": "ng g module --project=RedditReader --",
     "ngm-vtw": "ng g module --project=VinesToWinesDM --",
     "serve-dsl": "ng s DailySpendLimit",
     "serve-sc": "ng s StavesChurch",
+    "serve-rr": "ng s RedditReader",
     "serve-tk": "ng s TiffanysKitchen",
     "serve-vtw": "ng s VinesToWinesDM",
     "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
     "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch-Prod/ --base-href=/",
+    "build-rr": "ng b RedditReader --prod --noprogress --output-path=../RedditReader/docs/ --base-href=/RedditReader/ && copy ..\\RedditReader\\docs\\index.html ..\\RedditReader\\docs\\404.html",
     "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
     "build-tk-dev": "ng b TiffanysKitchen --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/",
     "build-vtw-dev": "ng b VinesToWinesDM --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/VinesToWinesDM/docs/ --base-href=/VinesToWinesDM/",
@@ -46,19 +50,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
-    "@angular/cdk": "~8.2.0",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
+    "@angular/animations": "~8.2.11",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.11",
+    "@angular/compiler": "~8.2.11",
+    "@angular/core": "~8.2.11",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "~8.2.5",
-    "@angular/material": "^8.2.0",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/pwa": "^0.803.4",
-    "@angular/router": "~8.2.5",
-    "@angular/service-worker": "~8.2.5",
+    "@angular/forms": "~8.2.11",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.11",
+    "@angular/platform-browser-dynamic": "~8.2.11",
+    "@angular/pwa": "^0.803.12",
+    "@angular/router": "~8.2.11",
+    "@angular/service-worker": "~8.2.11",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
     "material-icon-font": "^3.0.1",
@@ -69,11 +73,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular-devkit/build-ng-packagr": "~0.803.4",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
+    "@angular-devkit/build-angular": "~0.803.12",
+    "@angular-devkit/build-ng-packagr": "~0.803.12",
+    "@angular/cli": "~8.3.12",
+    "@angular/compiler-cli": "~8.2.11",
+    "@angular/language-service": "~8.2.11",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "ng-packagr": "^5.4.0",
