--- a/projects/gapi/package.json
+++ b/projects/gapi/package.json
@@ -2,7 +2,7 @@
   "name": "gapi",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^8.2.5",
-    "@angular/core": "^8.2.5"
+    "@angular/common": "~8.2.13",
+    "@angular/core": "~8.2.13"
  }
 }
