--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
     "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch-Prod/ --base-href=/",
-    "build-rr": "ng b RedditReader --prod --noprogress --output-path=../RedditReader/docs/ --base-href=/RedditReader/ && copy ..\\RedditReader\\docs\\index.html ..\\RedditReader\\docs\\404.html",
+    "build-rr": "node projects\\RedditReader\\replace.build.js projects/RedditReader/src/environments/environment.prod.ts  & ng b RedditReader --prod --noprogress --output-path=../RedditReader/docs/ --base-href=/RedditReader/ && copy ..\\RedditReader\\docs\\index.html ..\\RedditReader\\docs\\404.html",
     "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
     "build-tk-dev": "ng b TiffanysKitchen --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/",
     "build-vtw-dev": "ng b VinesToWinesDM --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/VinesToWinesDM/docs/ --base-href=/VinesToWinesDM/",
@@ -82,6 +82,7 @@
     "codelyzer": "^5.0.0",
     "ng-packagr": "^5.4.0",
     "npm-run-all": "^4.1.5",
+    "replace-in-file": "^4.2.0",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
