--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
     "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch-Prod/ --base-href=/",
-    "build-rr": "node projects\\RedditReader\\replace.build.js projects/RedditReader/src/environments/environment.prod.ts  & ng b RedditReader --prod --noprogress --output-path=../RedditReader/docs/ --base-href=/RedditReader/ && copy ..\\RedditReader\\docs\\index.html ..\\RedditReader\\docs\\404.html",
+    "build-rr": "git -C ..\\RedditReader pull & node projects\\RedditReader\\replace.build.js projects/RedditReader/src/environments/environment.prod.ts && ng b RedditReader --prod --output-path=../RedditReader/docs/ && copy ..\\RedditReader\\docs\\index.html ..\\RedditReader\\docs\\404.html && git -C ..\\RedditReader commit",
     "build-tk": "ng b TiffanysKitchen --prod --noprogress --output-path=../TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/ && copy ..\\TiffanysKitchen\\docs\\index.html ..\\TiffanysKitchen\\docs\\404.html",
     "build-tk-dev": "ng b TiffanysKitchen --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/TiffanysKitchen/docs/ --base-href=/TiffanysKitchen/",
     "build-vtw-dev": "ng b VinesToWinesDM --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/VinesToWinesDM/docs/ --base-href=/VinesToWinesDM/",
