--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "serve-rr": "ng s RedditReader",
     "serve-tk": "ng s TiffanysKitchen",
     "serve-vtw": "ng s VinesToWinesDM",
-    "build-dsl": "ng b DailySpendLimit --prod --noprogress --output-path=../DailySpendLimit/docs/ --base-href=/DailySpendLimit/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
+    "build-dsl": "ng b DailySpendLimit --prod --output-path=../DailySpendLimit/docs/ && copy ..\\DailySpendLimit\\docs\\index.html ..\\DailySpendLimit\\docs\\404.html",
     "build-sc-dev": "ng b StavesChurch --configuration=dev --noprogress --output-path=C:/inetpub/wwwroot/StavesChurch/docs/ --base-href=/StavesChurch/",
     "build-sc-test": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch/docs/ --base-href=/StavesChurch/ && copy ..\\StavesChurch\\docs\\index.html ..\\StavesChurch\\docs\\404.html",
     "build-sc": "ng b StavesChurch --prod --noprogress --output-path=../StavesChurch-Prod/ --base-href=/",
