--- a/package.json
+++ b/package.json
@@ -50,34 +50,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.13",
+    "@angular/animations": "~8.2.14",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.13",
-    "@angular/compiler": "~8.2.13",
-    "@angular/core": "~8.2.13",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
     "@angular/flex-layout": "github:angular/flex-layout-builds",
-    "@angular/forms": "~8.2.13",
+    "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.13",
-    "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/pwa": "^0.803.18",
-    "@angular/router": "~8.2.13",
-    "@angular/service-worker": "~8.2.13",
+    "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
     "hammerjs": "^2.0.8",
     "jsrsasign": "^8.0.12",
     "material-icon-font": "^3.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
-    "typeface-great-vibes": "0.0.72",
+    "shaka-player": "^2.5.6",
     "tslib": "^1.10.0",
+    "typeface-great-vibes": "0.0.72",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.18",
-    "@angular-devkit/build-ng-packagr": "~0.803.18",
-    "@angular/cli": "~8.3.18",
-    "@angular/compiler-cli": "~8.2.13",
-    "@angular/language-service": "~8.2.13",
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular-devkit/build-ng-packagr": "~0.803.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "ng-packagr": "^5.4.0",
